--- a/src/assets/styles/partials/_taxonomy-map.scss
+++ b/src/assets/styles/partials/_taxonomy-map.scss
@@ -688,7 +688,7 @@
     }
   }
 
-  @media screen and (min-width: 1400px) {
+  @media screen and (min-width: 1401px) {
     display: none;
   }
 }
